Refactor funcion cancelar, para que acepte estados en vez de borrar registros y terminando de documentar las reservas con swagger
