# src/Controller/ReservasController.php
@@ -2,7 +2,6 @@
 namespace App\Controller;
 
 use App\Middleware\AuthMiddleware;
-use App\Model\DTOs\RespuestaReservaDTO;
 use App\Model\DTOs\ReservaDTO;
 use App\Model\Roles;
 use App\Security\Validaciones;
@@ -15,7 +14,8 @@ class ReservasController extends BaseController {
     #[OA\Get(
         path: "/reservas",
         summary: "Obtener todas las reservas",
-        tags: ["Reservas"]
+        tags: ["Reservas"],
+        security: [ ["bearerAuth" => []] ]
     )]
     #[OA\Response(
         response: 200,
@@ -40,7 +40,8 @@ class ReservasController extends BaseController {
     #[OA\Get(
         path: "/reservas/mis-reservas",
         summary: "Obtener las reservas de un usuario ya sea profesional o paciente",
-        tags: ["Reservas"]
+        tags: ["Reservas"],
+        security: [ ["bearerAuth" => []] ]
     )]
     #[OA\Response(
         response: 200,
@@ -65,7 +66,8 @@ class ReservasController extends BaseController {
     #[OA\Post(
         path: "/reservas/reservar",
         summary: "Realizar una reserva",
-        tags: ["Reservas"]
+        tags: ["Reservas"],
+        security: [ ["bearerAuth" => []] ]
     )]
     #[OA\RequestBody(
         required: true,
@@ -74,15 +76,17 @@ class ReservasController extends BaseController {
     #[OA\Response(
         response: 201,
         description: "Reserva realizada",
-        content: "EXITO => Su reserva ha sido procesada correctamente!"
+        content: new OA\JsonContent(example:["EXITO => Su reserva ha sido procesada correctamente!"])
     )]
     #[OA\Response(
         response: 404,
-        description: "No se encontro un profesional con ese id"
+        description: "No hay resultado",
+        content: new OA\JsonContent(example:["ERROR" => "No se encontro un profesional con ese id"])
     )]
     #[OA\Response(
         response: 409,
-        description: "Este paciente/profesional ya tiene una reserva para esa misma fecha"
+        description: "Reserva superpuesta",
+        content: new OA\JsonContent(example:["ERROR" => "Este usuario ya tiene una reserva para esa misma fecha"])
     )]
     public function reservar() {
         $paciente = AuthMiddleware::handle([Roles::PACIENTE]);
@@ -96,12 +100,43 @@ class ReservasController extends BaseController {
 
         return $this->jsonResponse(201, $reserva);
     }
-    // TODO cambiar funcionalidad cancelarReserva para que no se elimine el registro, sino que se marque como CANCELADA (constituye a cambios en la BD y modelos y DTOs)
+    #[OA\Put(
+        path: "/reservas/cancelar/{id}",
+        summary: "Cancelar una reserva",
+        tags: ["Reservas"],
+        security: [ ["bearerAuth" => []] ]
+    )]
+    #[OA\Parameter(
+        name: "id",
+        in: "path",
+        required: true,
+        schema: new OA\Schema(type:"integer")
+    )]
+    #[OA\Response(
+        response: 200,
+        description: "Reserva cancelada!",
+        content: new OA\JsonContent(example:["EXITO" => "Reserva cancelada!"])
+    )]
+    #[OA\Response(
+        response: 400,
+        description: "Cancelacion tardia",
+        content: new OA\JsonContent(example:["ERROR" => "Solo se puede cancelar una reserva con Xhs de anticipacion"])
+    )]
+    #[OA\Response(
+        response: 409,
+        description: "La reserva ya fue cancelada o completada",
+        content: new OA\JsonContent(example: ["ERROR" => "La reserva ya fue cancelada!"])
+    )]
+    #[OA\Response(
+        response: 500,
+        description: "Error del servidor",
+        content: new OA\JsonContent(example:["ERROR" => "Error Interno del Servidor!"])
+    )]
     public function cancelarReserva(int $id) {
         $paciente = AuthMiddleware::handle([Roles::PACIENTE]);
 
         $this->service->cancelarReserva($id, $paciente);
 
-        return $this->jsonResponse(204, "");
+        return $this->jsonResponse(200, ["EXITO" => "Reserva cancelada!"]);
     }
 }
